--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
 
-        gtag('config', 'YOUR_TRACKING_ID');
+        gtag('config', 'G-Q462D24JZ8');
     </script>
 </head>
 <body>
